--- a/src/pages/DonorView/donorview.scss
+++ b/src/pages/DonorView/donorview.scss
@@ -1,7 +1,7 @@
-.donor{
+.donor-view{
     display: flex;
 
-    .donorContainer{
+    .donorviewContainer{
         background-color: rgb(241,243,246);
         flex:2;
 
